Fazendo coisa pra krl